vlib/v/scanner/tests/invalid_unicode_32_err.vv
a := '\U0000D8FF'
println(a)
